# copper-pt2

./: .gitignore  Cargo.toml  Makefile  README.md
apps/playground/: Cargo.toml
apps/playground/src/: lib.rs
apps/snapshot/: Cargo.toml
apps/snapshot/src/: args.rs  lib.rs
apps/stats-api/: Cargo.toml
apps/stats-api/src/: args.rs  http_api.rs  lib.rs  utils.rs
apps/stats-api/src/http_api/: current_top.rs  posts_by_user.rs  users_reaching_top.rs
deploy.d/: Dockerfile
deploy.d/docker-compose.d/: docker-compose.override.yml  docker-compose.yml
deploy.d/scripts.d/: take-snapshots-periodically.sh
docs/: analysis.md  definition.txt
libs/db/: Cargo.toml
libs/db/schema.d/: 00-seq-ids.sql  01-snapshots.sql  01-tab-items.sql  01-tab-top-ranks.sql  01-tab-users.sql  02-cons-items-fk-posted-by.sql  02-cons-items-item-id-unique.sql  02-cons-top-ranks-item-id.sql  02-cons-top-ranks-snapshot-id-rank-unique.sql  02-cons-top-ranks-snapshot-id.sql  02-cons-users-nickname-unique.sql
libs/db/src/: error.rs  items.rs  lib.rs  snapshots.rs  users.rs
libs/hn-api/: Cargo.toml
libs/hn-api/src/: error.rs  hn_api_client.rs  lib.rs
libs/hn-api/src/hn_api_client/: impl_fn_item.rs  impl_fn_new.rs  impl_fn_top.rs
