[workspace]
members = [
    "apps/*",
    "libs/*",
]

[workspace.dependencies]
db = {path = "libs/db"}
hn-api = {path = "libs/hn-api"}

bytes = "^1"
chrono = "^0.4"
dotenv = "^0.15"
futures = "^0.3"
log = "^0.4"
pretty_env_logger = "^0.4"
reqwest = "^0.11"
serde = "^1"
serde_json = "^1"
structopt = "^0.3"
thiserror = "^1"
tokio = "^1"
tokio-postgres = "^0.7"
url = "^2"