[package]
name = "playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
db = {workspace = true}
hn-api = {workspace = true}

chrono = {workspace = true}
dotenv = {workspace = true}
futures = {workspace = true}
log = {workspace = true}
pretty_env_logger = {workspace = true}
structopt = {workspace = true}
tokio = {workspace = true, features = ["rt", "macros"]}
tokio-postgres = {workspace = true}
