[package]
name = "stats-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
db = {workspace = true}

axum = {workspace = true}
deadpool-postgres = {workspace = true, features = ["rt_tokio_1"]}
dotenv = {workspace = true}
futures = {workspace = true}
log = {workspace = true}
pretty_env_logger = {workspace = true}
serde = {workspace = true, features = ["derive"]}
structopt = {workspace = true}
tokio = {workspace = true, features = ["rt", "rt-multi-thread", "macros"]}
tokio-postgres = {workspace = true}
