[package]
name = "hn-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = {workspace = true}
log = {workspace = true}
reqwest = {workspace = true}
thiserror = {workspace = true}
url = {workspace = true}
serde = {workspace = true, features = ["derive"]}
serde_json = {workspace = true}
